fix gaps

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -28,7 +29,7 @@ button:hover, button:focus {
 }
   
 
-@media screen and (min-width: 768px) and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1360px) {
   body {
     background-color: lightblue;
   }
